--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ name = "agno-rust"
 version = "0.1.0"
 edition = "2021"
 
-description = "Core library of Agno-Rust: agent loop, tool registry, and stub LM for testing"
+description = "A Rust port of Agno: lightweight agent framework with tools, loops, and LLMs"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/YASSERRMD/agno-rust"
