Enhance team workflows and runtime

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
+axum = { version = "0.7", features = ["macros", "json", "tokio"] }
+futures = "0.3"
+tokio-stream = "0.1"
 
 [package]
 name = "agno-rust"
