--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,10 +48,10 @@ tempfile = "3"
 reqwest = { workspace = true }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "json"] }
-tracing-opentelemetry = "0.24"
-opentelemetry = { version = "0.22", features = ["metrics", "trace", "rt-tokio"] }
+tracing-opentelemetry = "0.23"
+opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
 opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics", "trace"] }
 opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace", "metrics"] }
 opentelemetry-prometheus = "0.15"
-prometheus = { version = "0.13", default-features = false, features = ["proto", "process"] }
+prometheus = { version = "0.13", default-features = false, features = ["process"] }
 sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
