--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,3 +57,4 @@ prometheus = { version = "0.13", default-features = false, features = ["process"
 sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
 urlencoding = "2.1"
 regex = "1.10"
+base64 = "0.22.1"
