Optimize build time for Colab by making heavy dependencies optional and feature-gating components in sayr-engine and sayr-py

--- a/libs/sayr-py/Cargo.toml
+++ b/libs/sayr-py/Cargo.toml
@@ -15,3 +15,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
+
+[features]
+default = []
+telemetry = ["sayr-engine/telemetry"]
+aws = ["sayr-engine/aws"]
