--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,12 @@ exclude = [
 
 
 [features]
-default = ["duckdb"]
+default = ["duckdb", "server", "persistence", "aws", "telemetry"]
+duckdb = ["dep:duckdb"]
+server = ["dep:axum"]
+persistence = ["dep:sqlx"]
+aws = ["dep:aws-config", "dep:aws-sdk-bedrockruntime"]
+telemetry = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-prometheus", "dep:prometheus"]
 
 [dependencies]
 async-trait = "0.1"
@@ -59,7 +64,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "process", "time"] }
-axum = { version = "0.7", features = ["macros", "json", "tokio"] }
+axum = { version = "0.7", features = ["macros", "json", "tokio"], optional = true }
 futures = "0.3"
 tokio-stream = { version = "0.1", features = ["sync"] }
 sysinfo = { version = "0.30", default-features = false, features = ["multithread"] }
@@ -68,17 +73,17 @@ tempfile = "3"
 reqwest = { workspace = true }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "json"] }
-tracing-opentelemetry = "0.23"
-opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
-opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics", "trace"] }
-opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace", "metrics"] }
-opentelemetry-prometheus = "0.15"
-prometheus = { version = "0.13", default-features = false, features = ["process"] }
-sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono", "postgres", "uuid"] }
+tracing-opentelemetry = { version = "0.23", optional = true }
+opentelemetry = { version = "0.22", features = ["metrics", "trace"], optional = true }
+opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics", "trace"], optional = true }
+opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace", "metrics"], optional = true }
+opentelemetry-prometheus = { version = "0.15", optional = true }
+prometheus = { version = "0.13", default-features = false, features = ["process"], optional = true }
+sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono", "postgres", "uuid"], optional = true }
 urlencoding = "2.1"
 regex = "1.10"
 base64 = "0.22.1"
-aws-config = "1.8.12"
-aws-sdk-bedrockruntime = "1.120.0"
+aws-config = { version = "1.8.12", optional = true }
+aws-sdk-bedrockruntime = { version = "1.120.0", optional = true }
 duckdb = { version = "1.1.1", features = ["bundled"], optional = true }
 uuid = { version = "1.19.0", features = ["v4", "serde"] }
